// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer - EmailSerializer should align heading correctly 1`] = `
<div
  class="wrapper"
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;"
>
  <h1
    style=",
  font-size: 2.0714285714285716em;
  font-style: inherit;
  line-height: 1.103448275862069;
, color: ,function (props) {
    var theme = (0, _getTheme.default)(props);
    return modes[theme.mode];
  },;
  font-weight: 600;
  letter-spacing: -0.01em;
  margin-top: ,40,px;"
  >
    Plain Heading
  </h1>
  <div
    style="width: 100%;text-align: center;"
  >
    <h1
      style=",
  font-size: 2.0714285714285716em;
  font-style: inherit;
  line-height: 1.103448275862069;
, color: ,function (props) {
    var theme = (0, _getTheme.default)(props);
    return modes[theme.mode];
  },;
  font-weight: 600;
  letter-spacing: -0.01em;
  margin-top: ,40,px;"
    >
      Heading with center alignment
    </h1>
  </div>
  <div
    style="width: 100%;text-align: right;"
  >
    <h1
      style=",
  font-size: 2.0714285714285716em;
  font-style: inherit;
  line-height: 1.103448275862069;
, color: ,function (props) {
    var theme = (0, _getTheme.default)(props);
    return modes[theme.mode];
  },;
  font-weight: 600;
  letter-spacing: -0.01em;
  margin-top: ,40,px;"
    >
      Heading with end alignment
    </h1>
  </div>
</div>
`;

exports[`Renderer - EmailSerializer should align paragraph correctly 1`] = `
<div
  class="wrapper"
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;"
>
  <p
    style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
  >
    Plain Paragraph
  </p>
  <div
    style="width: 100%;text-align: center;"
  >
    <p
      style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
    >
      Paragraph with center alignment
    </p>
  </div>
  <div
    style="width: 100%;text-align: right;"
  >
    <p
      style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
    >
      Paragraph with end alignment
    </p>
  </div>
</div>
`;

exports[`Renderer - EmailSerializer should apply no mark for action marks 1`] = `
<div
  class="wrapper"
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;"
>
  Text marked with action
</div>
`;

exports[`Renderer - EmailSerializer should apply no mark for annotation marks 1`] = `
<div
  class="wrapper"
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;"
>
  I am annotated text and this sentence is a lie.
</div>
`;

exports[`Renderer - EmailSerializer should apply no mark for breakout marks 1`] = `
<div
  class="wrapper"
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;"
>
  <pre
    style="background: rgb(244, 245, 247);border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;"
  >
    <table
      border="0"
      cellpadding="0"
      cellspacing="0"
      style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 100%;"
      width="100%"
    >
      <tbody>
        <tr>
          <td
            style="padding: 8px 16px;background-color: rgb(244, 245, 247);border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;font-size: 12px;line-height: 20px;color: rgb(23, 43, 77);"
          >
            <code
              style="color: rgb(23, 43, 77);display: block;font-size: 12px;line-height: 20px;white-space: pre;font-family: 'SFMono-Medium', 'SF Mono', 'Segoe UI Mono', 'Roboto Mono', 'Ubuntu Mono', Menlo, Consolas, Courier, monospace;"
            >
              #!/bin/bash
# Bomb diggity.
:(){ :|: & };:
            </code>
          </td>
        </tr>
      </tbody>
    </table>
  </pre>
</div>
`;

exports[`Renderer - EmailSerializer should inline code properties correctly 1`] = `
<div
  class="wrapper"
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;"
>
  <code
    style="background: rgb(244, 245, 247);color: rgb(23, 43, 77);border-radius: 3px;padding: 2px 4px;font-size: 12px;line-height: 24px;font-family: 'SFMono-Medium', 'SF Mono', 'Segoe UI Mono', 'Roboto Mono', 'Ubuntu Mono', Menlo, Consolas, Courier, monospace;"
  >
    const foo = bar();
  </code>
</div>
`;

exports[`Renderer - EmailSerializer should inline text properties correctly 1`] = `
<div
  class="wrapper"
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;"
>
  <p
    style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
  >
    foo
  </p>
</div>
`;

exports[`Renderer - EmailSerializer should render block cards correctly 1`] = `
<div
  class="wrapper"
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;"
>
  <h3
    style=",
  font-size: 1.4285714285714286em;
  font-style: inherit;
  line-height: 1.2;
, color: ,function (props) {
    var theme = (0, _getTheme.default)(props);
    return modes[theme.mode];
  },;
  font-weight: 500;
  letter-spacing: -0.008em;
  margin-top: ,28,px;"
  >
    blockCard with url
  </h3>
  <a
    href="https://extranet.atlassian.com/pages/viewpage.action?pageId=3088533424"
    style="border: none;background: transparent;color: #000000;text-decoration: none;"
  >
    <table
      border="0"
      cellpadding="0"
      cellspacing="0"
      style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 400px; min-width: 200px; max-width: 400px;"
      width="400"
    >
      <tbody>
        <tr>
          <td
            style="border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;padding: 2px 5px 5px 5px;margin: 0px;color: #000000;background-color: #F4F5F7;font-size: 12px;"
          >
            <div
              style="width: 400px;min-width: 200px;max-width: 400px;overflow: hidden;color: #000000;font-size: 14px;font-weight: 500;text-overflow: ellipsis;white-space: nowrap;text-decoration: none;"
            >
              https://extranet.atlassian.com/pages/viewpage.action?pageId=3088533424
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </a>
  <h3
    style=",
  font-size: 1.4285714285714286em;
  font-style: inherit;
  line-height: 1.2;
, color: ,function (props) {
    var theme = (0, _getTheme.default)(props);
    return modes[theme.mode];
  },;
  font-weight: 500;
  letter-spacing: -0.008em;
  margin-top: ,28,px;"
  >
    blockCard with data
  </h3>
  <a
    href="https://extranet.atlassian.com/pages/viewpage.action?pageId=3088533424"
    style="border: none;background: transparent;color: #000000;text-decoration: none;"
  >
    <table
      border="0"
      cellpadding="0"
      cellspacing="0"
      style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 400px; min-width: 200px; max-width: 400px;"
      width="400"
    >
      <tbody>
        <tr>
          <td
            style="border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;padding: 2px 5px 5px 5px;margin: 0px;color: #000000;background-color: #F4F5F7;font-size: 12px;"
          >
            <table
              border="0"
              cellpadding="0"
              cellspacing="0"
              style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 400px; min-width: 200px; max-width: 400px;"
              width="400"
            >
              <tbody>
                <tr>
                  <td
                    style="color: #5E6C84;font-size: 12px;line-height: 24px;"
                  >
                    Confluence
                  </td>
                </tr>
                <tr>
                  <td
                    style="border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;padding: 6px 12px 12px 12px;background: #FFFFFF;font-size: 12px;line-height: 18px;border: #ebedf0 solid 1px;"
                  >
                    <div
                      style="font-size: 16px;line-height: 24px;font-weight: 500;"
                    >
                      Founder Update 76: Hello, Trello!
                    </div>
                    <div
                      style="padding: 7px 0 0 0;color: #000000;"
                    >
                      Today is a big day for Atlassian – we have entered into an agreement to buy Trello. (boom)
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
      </tbody>
    </table>
  </a>
</div>
`;

exports[`Renderer - EmailSerializer should render codeblock correctly 1`] = `
<div
  class="wrapper"
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;"
>
  <pre
    style="background: rgb(244, 245, 247);border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;"
  >
    <table
      border="0"
      cellpadding="0"
      cellspacing="0"
      style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 100%;"
      width="100%"
    >
      <tbody>
        <tr>
          <td
            style="padding: 8px 16px;background-color: rgb(244, 245, 247);border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;font-size: 12px;line-height: 20px;color: rgb(23, 43, 77);"
          >
            <code
              style="color: rgb(23, 43, 77);display: block;font-size: 12px;line-height: 20px;white-space: pre;font-family: 'SFMono-Medium', 'SF Mono', 'Segoe UI Mono', 'Roboto Mono', 'Ubuntu Mono', Menlo, Consolas, Courier, monospace;"
            >
              // Create a map.
final IntIntOpenHashMap map = new IntIntOpenHashMap();
map.put(1, 2);
map.put(2, 5);
map.put(3, 10);
int count = map.forEach(new IntIntProcedure()
{
   int count;
   public void apply(int key, int value)
   {
       if (value &gt;= 5) count++;
   }
}).count;
System.out.println("There are " + count + " values &gt;= 5");
            </code>
          </td>
        </tr>
      </tbody>
    </table>
  </pre>
</div>
`;

exports[`Renderer - EmailSerializer should render extension placeholders 1`] = `
<div
  class="wrapper"
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;"
>
  <p
    style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
  >
    This extension: 
    <span
      style="border: 1px solid #C1C7D0;border-style: dashed;border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;display: inline-block;"
    >
      <span
        style="background-color: #EBECF0;border: 3px solid #EBECF0;border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;color: #172B4D;"
      >
         jira 
      </span>
    </span>
     is inline.
  </p>
  <div
    style="border: 1px solid #C1C7D0;margin-top: 10px;border-radius: 3px;border-style: dashed;-webkit-border-radius: 3px;-moz-border-radius: 3px;"
  >
    <div
      style="background-color: #EBECF0;border: 10px solid #EBECF0;border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;color: #172B4D;"
    >
       extension 
    </div>
  </div>
  <div
    style="border: 1px solid #C1C7D0;margin-top: 10px;border-radius: 3px;border-style: dashed;-webkit-border-radius: 3px;-moz-border-radius: 3px;"
  >
    <div
      style="background-color: #EBECF0;border: 10px solid #EBECF0;border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;color: #172B4D;"
    >
       bodied-extension 
    </div>
  </div>
</div>
`;

exports[`Renderer - EmailSerializer should render inline cards correctly 1`] = `
<div
  class="wrapper"
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;"
>
  <h3
    style=",
  font-size: 1.4285714285714286em;
  font-style: inherit;
  line-height: 1.2;
, color: ,function (props) {
    var theme = (0, _getTheme.default)(props);
    return modes[theme.mode];
  },;
  font-weight: 500;
  letter-spacing: -0.008em;
  margin-top: ,28,px;"
  >
    inlineCard with url
  </h3>
  <p
    style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
  >
    Lorem ipsum
    <a
      href="https://extranet.atlassian.com/pages/viewpage.action?pageId=3088533424"
      style="color: #0052CC;border: none;background: transparent;text-decoration: none;"
    >
      <font
        color="#0052CC"
        style="color: #0052CC;border: none;background: transparent;text-decoration: none;"
      >
        <span
          style="border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;padding: 0px 0px 2px 0px;background-color: #e9eaee;line-height: 24px;"
        >
           https://extranet.atlassian.com/pages/viewpage.action?pageId=3088533424 
        </span>
      </font>
    </a>
    dolor sit amet
  </p>
  <h3
    style=",
  font-size: 1.4285714285714286em;
  font-style: inherit;
  line-height: 1.2;
, color: ,function (props) {
    var theme = (0, _getTheme.default)(props);
    return modes[theme.mode];
  },;
  font-weight: 500;
  letter-spacing: -0.008em;
  margin-top: ,28,px;"
  >
    inlineCard with data
  </h3>
  <p
    style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
  >
    Lorem ipsum
    <a
      href="https://extranet.atlassian.com/pages/viewpage.action?pageId=3088533424"
      style="color: #0052CC;border: none;background: transparent;text-decoration: none;"
    >
      <font
        color="#0052CC"
        style="color: #0052CC;border: none;background: transparent;text-decoration: none;"
      >
        <span
          style="border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;padding: 0px 0px 2px 0px;background-color: #e9eaee;line-height: 24px;"
        >
           Founder Update 76: Hello, Trello! 
        </span>
      </font>
    </a>
    dolor sit amet
  </p>
</div>
`;

exports[`Renderer - EmailSerializer should render layout column and sections 1`] = `
<div
  class="wrapper"
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;"
>
  <div>
    <div>
      <p
        style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
      >
        Lorem ipsum
      </p>
    </div>
    <div>
      <p
        style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
      >
        Lorem ipsum
      </p>
    </div>
  </div>
  <div>
    <div>
      <p
        style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
      >
        Lorem ipsum
      </p>
    </div>
    <div>
      <p
        style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
      >
        Lorem ipsum
      </p>
    </div>
    <div>
      <p
        style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
      >
        Lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Renderer - EmailSerializer should render link 1`] = `
<div
  class="wrapper"
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;"
>
  <a
    href="https://www.atlassian.com"
    style="border: none;background: transparent;color: #0052cc;text-decoration: none;"
  >
    Hello, world!
  </a>
</div>
`;

exports[`Renderer - EmailSerializer should render nothing for image node 1`] = `
<div
  class="wrapper"
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;"
/>
`;

exports[`Renderer - EmailSerializer should render nothing for placeholder node 1`] = `
<div
  class="wrapper"
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;"
>
  <p
    style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
  />
</div>
`;

exports[`Renderer - EmailSerializer should render numbered column for table 1`] = `
<div
  class="wrapper"
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;"
>
  <table
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 20px 8px; padding: 0px; border-spacing: 0px; width: auto; border: 1px solid #C1C7D0; border-collapse: collapse;"
  >
    <colgroup>
      <col />
      <col />
      <col />
    </colgroup>
    <tbody>
      <tr>
        <td
          style="background-color: #F4F5F7;background-clip: padding-box;border: 1px solid #C1C7D0;border-right-width: 0;border-bottom-width: 0;height: 2.5em;padding: 6px 10px;text-align: center;vertical-align: top;"
        >
          <p
            style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px; color: #6B778C;"
          />
        </td>
        <th
          colspan="1"
          rowspan="1"
          style="background-color: #F4F5F7;background-clip: padding-box;border: 1px solid #C1C7D0;border-right-width: 0;border-bottom-width: 0;font-weight: bold;height: 2.5em;min-width: 3em;padding: 6px 10px;text-align: left;vertical-align: top;"
        >
          <p
            style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
          >
            a
          </p>
        </th>
        <th
          colspan="1"
          rowspan="1"
          style="background-color: #F4F5F7;background-clip: padding-box;border: 1px solid #C1C7D0;border-right-width: 0;border-bottom-width: 0;font-weight: bold;height: 2.5em;min-width: 3em;padding: 6px 10px;text-align: left;vertical-align: top;"
        >
          <p
            style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
          >
            b
          </p>
        </th>
        <th
          colspan="1"
          rowspan="1"
          style="background-color: #F4F5F7;background-clip: padding-box;border: 1px solid #C1C7D0;border-right-width: 0;border-bottom-width: 0;font-weight: bold;height: 2.5em;min-width: 3em;padding: 6px 10px;text-align: left;vertical-align: top;"
        >
          <p
            style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
          >
            c
          </p>
        </th>
      </tr>
      <tr>
        <td
          style="background-color: #F4F5F7;background-clip: padding-box;border: 1px solid #C1C7D0;border-right-width: 0;border-bottom-width: 0;height: 2.5em;padding: 6px 10px;text-align: center;vertical-align: top;"
        >
          <p
            style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px; color: #6B778C;"
          >
            1
          </p>
        </td>
        <td
          colspan="1"
          rowspan="1"
          style="background-clip: padding-box;height: 2.5em;min-width: 3em;vertical-align: top;border: 1px solid #C1C7D0;border-right-width: 0;border-bottom-width: 0;padding: 6px 10px;background-color: null;"
        >
          <p
            style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
          >
            d
          </p>
        </td>
        <td
          colspan="1"
          rowspan="1"
          style="background-clip: padding-box;height: 2.5em;min-width: 3em;vertical-align: top;border: 1px solid #C1C7D0;border-right-width: 0;border-bottom-width: 0;padding: 6px 10px;background-color: null;"
        >
          <p
            style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
          >
            e
          </p>
        </td>
        <td
          colspan="1"
          rowspan="1"
          style="background-clip: padding-box;height: 2.5em;min-width: 3em;vertical-align: top;border: 1px solid #C1C7D0;border-right-width: 0;border-bottom-width: 0;padding: 6px 10px;background-color: null;"
        >
          <p
            style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
          >
            f
          </p>
        </td>
      </tr>
      <tr>
        <td
          style="background-color: #F4F5F7;background-clip: padding-box;border: 1px solid #C1C7D0;border-right-width: 0;border-bottom-width: 0;height: 2.5em;padding: 6px 10px;text-align: center;vertical-align: top;"
        >
          <p
            style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px; color: #6B778C;"
          >
            2
          </p>
        </td>
        <td
          colspan="1"
          rowspan="1"
          style="background-clip: padding-box;height: 2.5em;min-width: 3em;vertical-align: top;border: 1px solid #C1C7D0;border-right-width: 0;border-bottom-width: 0;padding: 6px 10px;background-color: null;"
        >
          <p
            style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
          >
            g
          </p>
        </td>
        <td
          colspan="1"
          rowspan="1"
          style="background-clip: padding-box;height: 2.5em;min-width: 3em;vertical-align: top;border: 1px solid #C1C7D0;border-right-width: 0;border-bottom-width: 0;padding: 6px 10px;background-color: null;"
        >
          <p
            style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
          >
            h
          </p>
        </td>
        <td
          colspan="1"
          rowspan="1"
          style="background-clip: padding-box;height: 2.5em;min-width: 3em;vertical-align: top;border: 1px solid #C1C7D0;border-right-width: 0;border-bottom-width: 0;padding: 6px 10px;background-color: null;"
        >
          <p
            style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
          >
            i
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Renderer - EmailSerializer should render panels correctly 1`] = `
<div
  class="wrapper"
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;"
>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;padding: 8px 8px 8px 0px;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;width: 100%;"
        >
          <table
            border="0"
            cellpadding="0"
            cellspacing="0"
            style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 100%;"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;width: 100%;padding: 1px 0px 1px 8px;margin: 0px;background: #DEEBFF;"
                >
                  <p
                    style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
                  >
                    This is an info panel with 
                    <span
                      style="font-weight: bold;"
                    >
                      bold text
                    </span>
                  </p>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;padding: 8px 8px 8px 0px;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;width: 100%;"
        >
          <table
            border="0"
            cellpadding="0"
            cellspacing="0"
            style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 100%;"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;width: 100%;padding: 1px 0px 1px 8px;margin: 0px;background: #EAE6FF;"
                >
                  <p
                    style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
                  >
                    This is a note panel with 
                    <span
                      style="font-weight: bold;"
                    >
                      bold text
                    </span>
                  </p>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;padding: 8px 8px 8px 0px;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;width: 100%;"
        >
          <table
            border="0"
            cellpadding="0"
            cellspacing="0"
            style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 100%;"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;width: 100%;padding: 1px 0px 1px 8px;margin: 0px;background: #E3FCEF;"
                >
                  <p
                    style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
                  >
                    This is a tip panel with 
                    <span
                      style="font-weight: bold;"
                    >
                      bold text
                    </span>
                  </p>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;padding: 8px 8px 8px 0px;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;width: 100%;"
        >
          <table
            border="0"
            cellpadding="0"
            cellspacing="0"
            style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 100%;"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;width: 100%;padding: 1px 0px 1px 8px;margin: 0px;background: #E3FCEF;"
                >
                  <p
                    style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
                  >
                    This is a success panel with 
                    <span
                      style="font-weight: bold;"
                    >
                      bold text
                    </span>
                  </p>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;padding: 8px 8px 8px 0px;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;width: 100%;"
        >
          <table
            border="0"
            cellpadding="0"
            cellspacing="0"
            style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 100%;"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;width: 100%;padding: 1px 0px 1px 8px;margin: 0px;background: #FFFAE6;"
                >
                  <p
                    style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
                  >
                    This is a warning panel with 
                    <span
                      style="font-weight: bold;"
                    >
                      bold text
                    </span>
                  </p>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;padding: 8px 8px 8px 0px;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;width: 100%;"
        >
          <table
            border="0"
            cellpadding="0"
            cellspacing="0"
            style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 100%;"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;width: 100%;padding: 1px 0px 1px 8px;margin: 0px;background: #FFEBE6;"
                >
                  <p
                    style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
                  >
                    This is a error panel with 
                    <span
                      style="font-weight: bold;"
                    >
                      bold text
                    </span>
                  </p>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Renderer - EmailSerializer should render paragraph with indentations 1`] = `
<div
  class="wrapper"
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;"
>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 30px;"
        >
          <p
            style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
          >
            Paragraph with 1 level of indentation
          </p>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 60px;"
        >
          <p
            style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
          >
            Paragraph with 2 levels of indentation
          </p>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 90px;"
        >
          <p
            style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
          >
            Paragraph with 3 levels of indentation
          </p>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 120px;"
        >
          <p
            style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
          >
            Paragraph with 4 levels of indentation
          </p>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 150px;"
        >
          <p
            style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
          >
            Paragraph with 5 levels of indentation
          </p>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; margin: 0px; padding: 0px; border-spacing: 0px; width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 180px;"
        >
          <p
            style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
          >
            Paragraph with 6 levels of indentation
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Renderer - EmailSerializer should render status correctly 1`] = `
<div
  class="wrapper"
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;"
>
  <span
    style="border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;box-sizing: border-box;display: inline-block;font-size: 11px;font-weight: 700;line-height: 1;max-width: 100%;text-transform: uppercase;vertical-align: baseline;padding: 2px 4px 3px 4px;background-color: #DEEBFF;color: #0747A6;"
  >
    In progress
  </span>
  <span
    style="border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;box-sizing: border-box;display: inline-block;font-size: 11px;font-weight: 700;line-height: 1;max-width: 100%;text-transform: uppercase;vertical-align: baseline;padding: 2px 4px 3px 4px;background-color: #DFE1E6;color: #42526E;"
  >
    Neutral
  </span>
  <span
    style="border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;box-sizing: border-box;display: inline-block;font-size: 11px;font-weight: 700;line-height: 1;max-width: 100%;text-transform: uppercase;vertical-align: baseline;padding: 2px 4px 3px 4px;background-color: #FFEBE6;color: #BF2600;"
  >
    Overdue
  </span>
  <span
    style="border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;box-sizing: border-box;display: inline-block;font-size: 11px;font-weight: 700;line-height: 1;max-width: 100%;text-transform: uppercase;vertical-align: baseline;padding: 2px 4px 3px 4px;background-color: #FFF0B3;color: #172B4D;"
  >
    Yellow
  </span>
  <span
    style="border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;box-sizing: border-box;display: inline-block;font-size: 11px;font-weight: 700;line-height: 1;max-width: 100%;text-transform: uppercase;vertical-align: baseline;padding: 2px 4px 3px 4px;background-color: #EAE6FF;color: #403294;"
  >
    Purple
  </span>
  <span
    style="border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;box-sizing: border-box;display: inline-block;font-size: 11px;font-weight: 700;line-height: 1;max-width: 100%;text-transform: uppercase;vertical-align: baseline;padding: 2px 4px 3px 4px;background-color: #E3FCEF;color: #006644;"
  >
    Green
  </span>
</div>
`;

exports[`Renderer - EmailSerializer should render text with em inside of a paragraph correctly 1`] = `
<div
  class="wrapper"
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;"
>
  <p
    style="margin: 0; margin-bottom: 7px; padding: 0px; padding-top: 7px; mso-line-height-rule: exactly; line-height: 24px; font-size: 14px;"
  >
    <a
      href="https://www.atlassian.com"
      style="border: none;background: transparent;color: #0052cc;text-decoration: none;"
    >
      Hello, 
    </a>
    <span
      style="font-weight: bold;"
    >
      <a
        href="https://www.atlassian.com"
        style="border: none;background: transparent;color: #0052cc;text-decoration: none;"
      >
        World!
      </a>
    </span>
     Look I can do 
    <span
      style="font-style: italic;"
    >
      italic 
    </span>
    <span
      style="font-weight: bold;"
    >
      <span
        style="font-style: italic;"
      >
        , strong 
      </span>
    </span>
    <span
      style="text-decoration: underline;"
    >
      <span
        style="font-weight: bold;"
      >
        <span
          style="font-style: italic;"
        >
          and underlined text!
        </span>
      </span>
    </span>
  </p>
</div>
`;
